Better responsability distribution Extracted tiles 2D array for Grid member Extracted x,y from tile Extracted some responsability from Tile
Overall better code